core/runtime-core-contracts/src/snapshots/runtime_core__contracts__harness_contract__tests__debug_harness_contract_output.snap
---
source: core/runtime-core/src/contracts/harness_contract.rs
expression: harness_contract()
---
Object {
    "authority": String("rust-harness-contract"),
    "behavioral_eval_tracks": Array [
        String("routing_accuracy"),
        String("token_efficiency"),
        String("long_task_continuity"),
        String("trajectory_health"),
        String("closeout_integrity"),
        String("skill_contract_quality"),
        String("subagent_lane_integrity"),
        String("review_gate_integrity"),
        String("contract_integrity"),
    ],
    "failure_taxonomy": Array [
        Object {
            "description": String("The task routes to the wrong owner/gate or misses an expected owner."),
            "id": String("route_miss"),
        },
        Object {
            "description": String("The active owner, goal, or scope changes without explicit contract update intent."),
            "id": String("owner_drift"),
        },
        Object {
            "description": String("Large or irrelevant context accumulates in the parent thread or hot prompt surface."),
            "id": String("context_rot"),
        },
        Object {
            "description": String("A tool/skill interface is ambiguous, too verbose, or lacks failure semantics."),
            "id": String("tool_contract_bad"),
        },
        Object {
            "description": String("A completion/pass claim has no executable verifier or evidence reference."),
            "id": String("verification_missing"),
        },
        Object {
            "description": String("The answer depends on volatile external truth without an attributed current source."),
            "id": String("source_stale"),
        },
        Object {
            "description": String("A step can mutate external state without explicit approval, idempotency, or recovery notes."),
            "id": String("side_effect_risk"),
        },
        Object {
            "description": String("A subagent lane is used without isolation, bounded scope, digest, or verification."),
            "id": String("subagent_misuse"),
        },
        Object {
            "description": String("The task cannot be reconstructed from trace/evidence artifacts."),
            "id": String("trace_gap"),
        },
        Object {
            "description": String("A long-running task cannot resume from a step-level durable ledger."),
            "id": String("step_recovery_gap"),
        },
    ],
    "schema_version": String("router-rs-harness-contract-v1"),
    "step_recovery": Object {
        "canonical_writer": String("router-rs framework step-ledger"),
        "ledger": String("STEP_LEDGER.jsonl"),
        "summary_projection": String("TASK_STATE.json.step_ledger"),
    },
    "trajectory_event_convention": Object {
        "model_context_policy": String("Persist full trajectory events; inject only summaries, cursors, or evidence refs."),
        "required_payload_fields": Array [
            String("task_id"),
            String("owner"),
            String("gate"),
            String("overlay"),
            String("horizon"),
            String("phase"),
            String("tool_or_lane"),
            String("status"),
            String("failure_class"),
            String("evidence_ref"),
            String("context_bytes"),
        ],
        "sink": String("TRACE_EVENTS.jsonl via trace_runtime record-event"),
    },
}
